--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 
 <body>
   <div class="top-container">
-    <img class="top-cloud" src="images/cloud.png" alt="cloud">
+    <img class="top-cloud" src="cloud.png" alt="cloud">
     <div class="title-text">
       <h1>I'm Samer.</h1>
       <h2>a <span class="pro">dev</span>eloper.</h2>
     </div>
-    <img class="bottom-cloud" src="images/cloud.png" alt="cloud">
-    <img class="mountain" src="images/mountain.png" alt="mountain-img">
+    <img class="bottom-cloud" src="cloud.png" alt="cloud">
+    <img class="mountain" src="mountain.png" alt="mountain-img">
   </div>
 
   <div class="middle-container">
